add simple image and text to index page

--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
     <h1>Using Free and Open Source Solutions in Geospatial Science Education</h1>
     You should be redirected to the
     <a href="vaclav-petras-foss-in-geospatial-science-education.pdf">presentation slides PDF</a>.
+    <p>
+        <em>Using Free and Open Source Solutions in Geospatial Science Education</em>
+        presented at FOSS4G Europe 2015 in Como, Italy
+    <p>
+    <img src="image.png">
   </body>
 </html>
