--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=vaclav-petras-foss-in-geospatial-science-education.pdf" />
+    <meta http-equiv="refresh" content="0; url=vaclav-petras-foss-in-geospatial-science-education.pdf">
+    <meta name="title" content="Using Free and Open Source Solutions in Geospatial Science Education">
+    <meta name="description" content="slides for talk from FOSS4G Europe 2015 in Como">
     <title>Using Free and Open Source Solutions in Geospatial Science Education</title>
   </head>
   <body>
@@ -11,8 +13,8 @@
     <a href="vaclav-petras-foss-in-geospatial-science-education.pdf">presentation slides PDF</a>.
     <p>
         <em>Using Free and Open Source Solutions in Geospatial Science Education</em>
-        presented at FOSS4G Europe 2015 in Como, Italy
+        was presented at FOSS4G Europe 2015 in Como.
     <p>
-    <img src="image.png">
+    <img src="image.png" alt="first slide">
   </body>
 </html>
