add metadata according to schema.org

--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="title" content="Using Free and Open Source Solutions in Geospatial Science Education">
     <meta name="description" content="slides for talk from FOSS4G Europe 2015 in Como">
     <title>Using Free and Open Source Solutions in Geospatial Science Education</title>
+    <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "ScholarlyArticle",
+      "headline": "FOSS in Geospatial Science Education",
+      "alternativeHeadline": "Using Free and Open Source Solutions in Geospatial Science Education",
+      "image": [
+        "image.png"
+      ],
+      "datePublished": "2015-07-15",
+      "description": "Presentation slides for talk at FOSS4G Europe 2015 in Como"
+    }
+    </script>
+
   </head>
   <body>
     <h1>Using Free and Open Source Solutions in Geospatial Science Education</h1>
